# calistar

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
calistar/: __init__.py  _version.py  calistar.py
docs/: about.rst  calistar.rst  conf.py  index.rst  installation.rst  modules.rst  requirements.txt  tutorial.ipynb
tests/: test_calistar.py
