[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calistar"
version = "0.1.0"
authors = [{name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"}]
description = "Tool to search for a calibration star"
readme = "README.rst"
requires-python = ">=3.10,<3.13"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["dependencies"]

[project.urls]
Documentation = "https://calistar.readthedocs.io"
Repository = "https://github.com/tomasstolker/calistar"
Issues = "https://github.com/tomasstolker/calistar/issues"

[tool.setuptools]
packages = ["calistar"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
