[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calistar"
authors = [{name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"}]
description = "Tool to search for a calibration star"
readme = "README.rst"
requires-python = ">=3.11,<3.14"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "astroquery",
    "beartype",
    "gaiaxpy",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "pooch",
    "rich",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "jupyter",
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinxawesome-theme",
]
test = [
    "black",
    "flake8",
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://calistar.readthedocs.io"
Repository = "https://github.com/tomasstolker/calistar"
Issues = "https://github.com/tomasstolker/calistar/issues"

[tool.setuptools]
packages = ["calistar"]

[tool.setuptools_scm]
write_to = "calistar/_version.py"
local_scheme = "no-local-version"
